portfolio and contact work

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 	<header id="header">
 
-		<div id="name">
+		<div class="name">
 
 			<h1>Casey Graser</h1>	
 
@@ -49,15 +49,17 @@
 	</div>
 
 
-	<h2>Contact</h2>
+	
 
 	<form action="/action_page.php" id="contact">
+
+		<h2>Contact</h2>
 		
-		Name: <br> <input type="text" name="fullname"><br>
+		Name: <br> <input id="contactBoxes" type="text" name="fullname"><br>
 		
-		Email: <br> <input type="text" name="email"><br>
+		Email: <br> <input id="contactBoxes" type="text" name="email"><br>
 		
-		Message: <br> <input type="text" name="message"><br>
+		Message: <br> <input id="message" type="text" name="message"><br>
 		
 		<input type="submit" value="Submit">
 	
