--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,7 @@
 
 	<header id="header">
 
-			<div id="name">
+			<div class="name">
 	
 				<h1>Casey Graser</h1>	
 	
@@ -47,14 +48,16 @@
 				 </a>
  
 </div>
+
 <div id="aboutMe">
+
 	<h2>About Me</h2>
 
-	<img src="../Caseypic.png" id="profilePicture">
+	<img src="assets/images/Caseypic.png" id="profilePicture">
 
 	<p>My name is Casey Graser. I was born in Salt Lake City. I love gaming and outdoor activities. I got into coding due to my passion for gaming and 
 		I hope that it can land me a terrific career. It has been my dream for a very long time to own a home. I hope to accomplish that goal within the 
-		next few years by learning to code. I hope to work for a company called "Clearlink" some day. I have friends that work their and tell me that it is a wonderful place to work.
+		next few years by working very hard, and learning to code. I hope to work for a company called "Clearlink" some day. I have friends that work their and tell me that it is a wonderful place company to work for.
 	</p> 
 </div>
  <footer>
