--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Portfolio</title>
 </head>
+<body background="assets/images/backgroundpicture.png">
 
 <header id="header">
 
-	<div id="name">
+	<div class="name">
 
 		<h1>Casey Graser</h1>	
 
@@ -47,13 +48,42 @@
 
 	<h2>Portfolio</h2>
 
-	<img src="placeholder1.jpg">Hang Man
+	<div class="portfolioImages">
 
-	<img src="placeholder2.jpg">RPG Game
+		<div class="placeHolderImg">
+
+	<img class="photos" src="assets/images/placeholder1.jpg">
 	
-	<img src="placeholder4.jpg">Trivia Game
+	<div class="portfolioText">Hang Man</div>
+
+</div>
+
+<div class="placeHolderImg">
+
+	<img class="photos" src="assets/images/placeholder2.jpg">
+
+	<div class="portfolioText">RPG Game</div>
 	
-	<img src="placeholder5.jpg">Rock Paper Scissors
+	</div>
+
+	<div class="placeHolderImg">
+
+
+	<img class="photos" src="assets/images/placeholder4.jpg">
+
+	<div class="portfolioText">Trivia Game</div>
+
+	</div>
+
+	<div class="placeHolderImg">
+
+		<img class="photos" src="assets/images/placeholder5.jpg">
+
+		<div class="portfolioText">Rock Paper Scissors</div>
+
+	</div>
+
+	</div>
 
 
 
