--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<meta charset="UTF-8">
@@ -14,61 +15,67 @@
 
 		<div class="name">
 
-			<h1>Casey Graser</h1>	
+			<h1>Casey Graser</h1>
 
-			</div>
+		</div>
 
-	<nav id="directory">
+		<nav id="directory">
 
-		<a href="index.html">About</a>
+			<a href="index.html">About</a>
 
-		<a href="portfolio.html">Portfolio</a>
+			<a href="portfolio.html">Portfolio</a>
 
-		<a href="contact.html">Contact</a>
+			<a href="contact.html">Contact</a>
 
-	</nav>
-		
-</header>
+		</nav>
 
-		<div id="sideBar">
+	</header>
 
-				<h3>Connect with Me</h3>
-	
-			<a href="https://github.com/Csgraser">
-				<img src="assets/images/githubicon.png" id="gitHubPicture">
-				</a>
-	 
-				<a href="https://www.linkedin.com/in/casey-graser-4b0937145/">
-				 <img src="assets/images/linkedinicon.png" id="linkedInPicture">
-				 </a>
-	 
-				 <a href="https://stackoverflow.com/users/8493307/casey-graser?tab=profile">
-					 <img src="assets/images/stackoverflowicon.png" id="stackOverFlowPicture">
-					 </a>
-	 
+	<div id="sideBar">
+
+		<h3>Connect with Me</h3>
+
+		<a href="https://github.com/Csgraser">
+			<img src="assets/images/githubicon.png" id="gitHubPicture">
+		</a>
+
+		<a href="https://www.linkedin.com/in/casey-graser-4b0937145/">
+			<img src="assets/images/linkedinicon.png" id="linkedInPicture">
+		</a>
+
+		<a href="https://stackoverflow.com/users/8493307/casey-graser?tab=profile">
+			<img src="assets/images/stackoverflowicon.png" id="stackOverFlowPicture">
+		</a>
+
 	</div>
 
 
-	
+
 
 	<form action="/action_page.php" id="contact">
 
 		<h2>Contact</h2>
-		
-		Name: <br> <input id="contactBoxes" type="text" name="fullname"><br>
-		
-		Email: <br> <input id="contactBoxes" type="text" name="email"><br>
-		
-		Message: <br> <input id="message" type="text" name="message"><br>
-		
+
+		Name:
+		<br>
+		<input id="contactBoxes" type="text" name="fullname">
+		<br> Email:
+		<br>
+		<input id="contactBoxes" type="text" name="email">
+		<br> Message:
+		<br>
+		<input id="message" type="text" name="message">
+		<br>
+
 		<input type="submit" value="Submit">
-	
+
 	</form>
 
 	<footer>
-			Copyright Casey Graser
-			 </footer>
-	
-	
+		Copyright Casey Graser
+	</footer>
+
+
 </body>
+
 </html>
