--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -13,56 +14,59 @@
 
 	<header id="header">
 
-			<div class="name">
-	
-				<h1>Casey Graser</h1>	
-	
-				</div>
-	
+		<div class="name">
+
+			<h1>Casey Graser</h1>
+
+		</div>
+
 		<nav id="directory">
 
 			<a href="index.html">About</a>
-	
+
 			<a href="portfolio.html">Portfolio</a>
-	
+
 			<a href="contact.html">Contact</a>
 
 		</nav>
-			
+
 	</header>
 
-<div id="sideBar">
+	<div id="sideBar">
 
-			<h3>Connect with Me</h3>
+		<h3>Connect with Me</h3>
 
 		<a href="https://github.com/Csgraser">
 			<img src="assets/images/githubicon.png" id="gitHubPicture">
-			</a>
- 
-			<a href="https://www.linkedin.com/in/casey-graser-4b0937145/">
-			 <img src="assets/images/linkedinicon.png" id="linkedInPicture">
-			 </a>
- 
-			 <a href="https://stackoverflow.com/users/8493307/casey-graser?tab=profile">
-				 <img src="assets/images/stackoverflowicon.png" id="stackOverFlowPicture">
-				 </a>
- 
-</div>
+		</a>
 
-<div id="aboutMe">
+		<a href="https://www.linkedin.com/in/casey-graser-4b0937145/">
+			<img src="assets/images/linkedinicon.png" id="linkedInPicture">
+		</a>
 
-	<h2>About Me</h2>
+		<a href="https://stackoverflow.com/users/8493307/casey-graser?tab=profile">
+			<img src="assets/images/stackoverflowicon.png" id="stackOverFlowPicture">
+		</a>
 
-	<img src="assets/images/Caseypic.png" id="profilePicture">
+	</div>
 
-	<p>My name is Casey Graser. I was born in Salt Lake City. I love gaming and outdoor activities. I got into coding due to my passion for gaming and 
-		I hope that it can land me a terrific career. It has been my dream for a very long time to own a home. I hope to accomplish that goal within the 
-		next few years by working very hard, and learning to code. I hope to work for a company called "Clearlink" some day. I have friends that work their and tell me that it is a wonderful place company to work for.
-	</p> 
-</div>
- <footer>
-Copyright Casey Graser
- </footer>
-	
-	</body>
+	<div id="aboutMe">
+
+		<h2>About Me</h2>
+
+		<img src="assets/images/Caseypic.png" id="profilePicture">
+
+		<p>My name is Casey Graser. I was born in Salt Lake City. I love gaming and outdoor activities. I got into coding due to my
+			passion for gaming and I hope that it can land me a terrific career. It has been my dream for a very long time to own
+			a home. I hope to accomplish that goal within the next few years by working very hard, and learning to code. I hope to
+			work for a company called "Clearlink" some day. I have friends that work their and tell me that it is a wonderful place
+			company to work for.
+		</p>
+	</div>
+	<footer>
+		Copyright Casey Graser
+	</footer>
+
+</body>
+
 </html>
