fixed profile page

--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
 
 		<img src="assets/images/Caseypic.png" id="profilePicture">
 
-		<p>My name is Casey Graser. I was born in Salt Lake City. I love gaming and outdoor activities. I got into coding due to my
-			passion for gaming and I hope that it can land me a terrific career. It has been my dream for a very long time to own
-			a home. I hope to accomplish that goal within the next few years by working very hard, and learning to code. I hope to
-			work for a company called "Clearlink" some day. I have friends that work their and tell me that it is a wonderful place
-			company to work for.
+		<p>My name is Casey Graser, I am excited to learn as much as possible about coding so that I can acquire the skills necessary for a terrific career.
 		</p>
+		<br>
+		<p>It has been my dream since the age of sixteen to own a home of my own. I hope that by learning to code I will not only be able to find a career that is profitable, but enjoyable as well.</p>
 	</div>
 	<footer>
 		Copyright Casey Graser
