--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 		<input id="message" type="text" name="message">
 		<br>
 
-		<input type="submit" value="Submit">
+		<input type="submit" value="Submit" id="submitButton">
 
 	</form>
 
