--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
 
 	<div class="portfolioImages">
 
-			<h2>Portfolio</h2>
+			<h2 id="portfolioHeader">Portfolio</h2>
 
 		<div class="placeHolderImg">
 
